--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,7 +1,14 @@
 {
+  "MinimumLevel": {
+    "Default": "Error",
+    "Override": {
+      "Microsoft": "Error",
+      "System": "Error"
+    }
+  },
   "Serilog": {
 
-   
+
     "WriteTo": [
       {
         "Name": "Console"
@@ -10,7 +17,8 @@
       {
         "Name": "GoogleCloudLogging",
         "Args": {
-          "projectId": "seventh-aquifer-397620"
+          "projectId": "plasma-yeti-415904",
+          "batchSizeLimit": 1
         }
 
       },
@@ -21,8 +29,8 @@
           "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter,Serilog.Formatting.Compact"
         }
       }
-      
+
     ]
   }
- 
+
 }
