--- a/appsettings.json
+++ b/appsettings.json
@@ -5,11 +5,37 @@
       "Microsoft.AspNetCore": "Error"
     }
   },
-  
+
   "AllowedHosts": "*",
   "Urls": {
 
     "MS2": "http://localhost:8001"
+  },
+  "Serilog": {
+
+
+    "WriteTo": [
+      {
+        "Name": "Console"
+
+      },
+      {
+        "Name": "GoogleCloudLogging",
+        "Args": {
+          "projectId": "plasma-yeti-415904",
+          "batchSizeLimit": 1
+        }
+
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter,Serilog.Formatting.Compact"
+        }
+      }
+
+    ]
   }
 
 }
