--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,14 +1,7 @@
 {
-  "MinimumLevel": {
-    "Default": "Error",
-    "Override": {
-      "Microsoft": "Error",
-      "System": "Error"
-    }
-  },
   "Serilog": {
 
-
+   
     "WriteTo": [
       {
         "Name": "Console"
@@ -17,8 +10,7 @@
       {
         "Name": "GoogleCloudLogging",
         "Args": {
-          "projectId": "plasma-yeti-415904",
-          "batchSizeLimit": 1
+          "projectId": "seventh-aquifer-397620"
         }
 
       },
@@ -29,8 +21,8 @@
           "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter,Serilog.Formatting.Compact"
         }
       }
-
+      
     ]
   }
-
+ 
 }
