--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,15 +2,36 @@
   "profiles": {
     "WebApplication1": {
       "commandName": "Project",
-
-      
+   
+      "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "GOOGLE_APPLICATION_CREDENTIALS": "C:\\Users\\pramu\\OneDrive\\Desktop\\plasma-yeti-415904-5247b950531f.json"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true
-
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7215;http://localhost:5193"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
+    }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:27003",
+      "sslPort": 44304
     }
   }
 }
-
