--- a/appsettings.json
+++ b/appsettings.json
@@ -1,41 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Error",
-      "Microsoft.AspNetCore": "Error"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Debug"
     }
   },
-
+  
   "AllowedHosts": "*",
   "Urls": {
 
     "MS2": "http://localhost:8001"
-  },
-  "Serilog": {
-
-
-    "WriteTo": [
-      {
-        "Name": "Console"
-
-      },
-      {
-        "Name": "GoogleCloudLogging",
-        "Args": {
-          "projectId": "plasma-yeti-415904",
-          "batchSizeLimit": 1
-        }
-
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "./logs/log-.txt",
-          "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter,Serilog.Formatting.Compact"
-        }
-      }
-
-    ]
   }
 
 }
