--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,7 +10,8 @@
       {
         "Name": "GoogleCloudLogging",
         "Args": {
-          "projectId": "seventh-aquifer-397620"
+          "projectId": "plasma-yeti-415904",
+          "batchSizeLimit": 1
         }
 
       },
