--- a/appsettings.json
+++ b/appsettings.json
@@ -5,11 +5,30 @@
       "Microsoft.AspNetCore": "Debug"
     }
   },
-  
-  "AllowedHosts": "*",
-  "Urls": {
+  "Serilog": {
 
-    "MS2": "http://localhost:8001"
+    "WriteTo": [
+
+      {
+        "Name": "GoogleCloudLogging",
+        "Args": {
+          "projectId": "plasma-yeti-415904",
+          "batchSizeLimit": 1
+        }
+
+      }
+    ]
+
+  },
+
+      "AllowedHosts"
+      :
+      "*",
+      "Urls"
+      :
+      {
+
+        "MS2": "http://localhost:8001"
+      }
+
   }
-
-}
